re-done deployment

--- a/deploy.yml
+++ b/deploy.yml
@@ -1,22 +1,12 @@
 - hosts: cluster
   tasks:
 
-    - name: Remove old files
+    - name: Remove old JAR
       file:
         state: "absent"
         path: ""
 
-    - name: Copy program files and pom.xml
+    - name: Copy new JAR
       copy:
         src: "."
         dest: ""
-
-    - name: Build Maven project
-
-    - name: Stop old service
-
-    - name: Remove old service in init.d
-
-    - name: Create new service in init.d
-
-    - name: Start new service
