init the program

--- a/deploy.yml
+++ b/deploy.yml
@@ -1,12 +1,21 @@
 - hosts: cluster
   tasks:
 
-    - name: Remove old JAR
+    - name: Remove old policy file
       file:
         state: "absent"
-        path: ""
+        path: "/dsv.policy"
 
     - name: Copy new JAR
       copy:
-        src: "."
-        dest: ""
+        src: "./target/distributedComputation-0.8 ALPHA.jar"
+        dest: "/dsv.jar"
+    - name: Remove old JAR
+      file:
+        state: "absent"
+        path: "/dsv.jar"
+
+    - name: Copy new policy file
+      copy:
+        src: "./dsv.policy"
+        dest: "/dsv.policy"
